# tauri-plugin-drpc

./: Cargo.toml  README.md  build.rs  bun.lockb  package.json
guest-js/: README.md  activity.ts  bun.lockb  index.ts  package.json
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: clear_activity.toml  destroy_thread.toml  is_running.toml  set_activity.toml  spawn_thread.toml
permissions/schemas/: schema.json
src/: lib.rs
src/rpc/: mod.rs  rpc.rs  thread.rs
