[package]
name = "tauri-plugin-drpc"
version = "0.1.0"
authors = ["smokingplaya"]
description = "A plugin for Tauri that adds support for Discord Rich Presence"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-drpc"

[dependencies]
tauri = { version = "2.2.4" }
serde = "1.0"
thiserror = "2"
anyhow = "1.0.95"
rpcdiscord = "0.2.6"
once_cell = "1.20.2"
tokio = "1.43.0"
log = "0.4.25"
serde_json = "1.0.137"

[build-dependencies]
tauri-plugin = { version = "2.0.3", features = ["build"] }