[package]
name = "tauri-plugin-drpc"
version = "0.1.5"
authors = ["smokingplaya"]
description = "A plugin for Tauri that adds support for Discord Rich Presence"
edition = "2021"
rust-version = "1.80.0"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-drpc"
license = "	GPL-3.0-only"
keywords = ["discord", "rich-presence", "ipc", "tauri"]
repository = "https://github.com/smokingplaya/tauri-plugin-drpc"
documentation = "https://docs.rs/tauri-plugin-drpc"

[dependencies]
tauri = { version = "2.2.4" }
serde = "1.0"
thiserror = "2"
rpcdiscord = "0.2.6"
tokio = { version = "1.43.0", features = ["time"] }
log = "0.4.25"
serde_json = "1.0.137"

[build-dependencies]
tauri-plugin = { version = "2.0.3", features = ["build"] }
